# sums

./: .env  pyproject.toml  serve.py  sums.py
static/: index.html
